# apex-auto-app

./: .env  .gitignore  Dockerfile  README.md  apex_auto_mcp.py  docker-compose.yaml  models.py  pyproject.toml
.github/workflows/: build-and-push.yaml
api_server/: .dockerignore  Dockerfile  apex_auto_api.py  models.py
api_server/handlers/: database.py
handlers/: database.py
mcp_server/: .dockerignore  Dockerfile  apex_auto_mcp.py
scripts/: start.sh
tests/: api_test.py
